styles/styles.css
/* Color Palette */
:root {
  --color-primary: #2584ff;
  --color-secundary: #00d9ff;
  --color-accent: #ff3400;
  --color-headings: #1b0760;
  --color-body: #918ca4;
  --color-body-darker: #5c5577;
  --color-border: #ccc;
}

*,
*::after,
*::before {
  box-sizing: border-box;
}

/* Typography */
::selection {
  background: var(--color-primary);
  color: #fff;
}

html {
  /* 62.5% of 16px = 10px*/
  font-size: 62.5%;
}

body {
  font-family: Inter, Arial, Helvetica, sans-serif;
  color: var(--color-body);
  font-size: 2.4rem;
  line-height: 1.5;
}

h1,
h2,
h3 {
  color: var(--color-headings);
  margin-bottom: 1rem;
  line-height: 1.1;
}

h1 {
  font-size: 7rem;
}

h2 {
  font-size: 4rem;
}

h3 {
  font-size: 3rem;
  font-weight: 500;
}

p {
  margin-top: 0;
}

@media screen and (min-width: 1024px) {
  body {
    font-size: 1.8rem;
  }

  h1 {
    font-size: 8rem;
  }

  h2 {
    font-size: 4rem;
  }

  h3 {
    font-size: 2.4rem;
  }
}

/*Links*/
a {
  text-decoration: none;
}

.link {
  color: var(--color-accent);
  text-transform: uppercase;
  font-size: 2rem;
  font-weight: bold;
}

.link::after {
  content: "-->";
  margin-left: 5px;
  transition: margin 0.15s;
}

.link:hover::after {
  margin-left: 10px;
}

@media screen and (min-width: 1024px) {
  .link {
    font-size: 1.5rem;
  }
}

/*Badges*/
.badge {
  border-radius: 20px;
  font-size: 2rem;
  padding: 0.5rem 2rem;
  font-weight: bold;
  white-space: nowrap;
}

.badge--primary {
  background: var(--color-primary);
  color: #fff;
}

.badge--secundary {
  background: var(--color-secundary);
  color: #fff;
}

.badge--small {
  font-size: 1.6rem;
}

@media screen and (min-width: 1024px) {
  .badge {
    font-size: 1.5rem;
  }

  .badge--small {
    font-size: 1.2rem;
    padding: 0.5rem 1.5rem;
  }
}

/* List */
.list {
  list-style: none;
  padding-left: 0;
}

.list--inline .list__item {
  display: inline-block;
  font-weight: bold;
  margin-right: 2rem;
}

.list--tick {
  margin: 4rem;
  padding-left: 2rem;
  list-style-image: url(../images/tick.svg);
  color: var(--color-headings);
}

.list--tick .list__item {
  padding-left: 0.5rem;
  margin-bottom: 1rem;
}

@media screen and (min-width: 1024px) {
  .list--tick .list__item {
    padding-left: 0;
  }
}

/* Icons */

.icon {
  width: 40px;
  height: 40px;
}

.icon--primary {
  fill: var(--color-primary);
}

.icon--white {
  fill: #fff;
}

.icon-container {
  width: 64px;
  height: 64px;
  background-color: #f3f9fa;
  display: inline-flex;
  border-radius: 100%;
  justify-content: center;
  align-items: center;
}

.icon-container__accent {
  background: var(--color-accent);
}

/*Buttons*/

.button {
  border-radius: 40px;
  font-size: 1.8rem;
  white-space: nowrap;
  font-weight: bold;
  text-transform: uppercase;
  border: 0;
  padding: 2rem 4rem;
  cursor: pointer;
  text-align: center;
  margin: 1rem 0;
  outline: 0;
}

.button .icon {
  width: 2rem;
  height: 2rem;
  margin-right: 1rem;
  vertical-align: middle;
}

.button--primary {
  background: var(--color-primary);
  color: #fff;
}

.button--primary:hover {
  background: #3783e7;
}

.button--secundary {
  background: var(--color-secundary);
  color: #fff;
}

.button--secundary:hover {
  background: #41defa;
}

.button--accent {
  background: var(--color-accent);
  color: #fff;
}

.button--accent:hover {
  background: #fb481b;
}

.button--outline {
  background: #fff;
  color: var(--color-headings);
  border: 2px solid var(--color-headings);
}

.button--outline:hover {
  background: var(--color-headings);
  color: #fff;
}

.button--block {
  width: 100%;
  display: inline-block;
}

.button--stretched {
  padding-left: 6rem;
  padding-right: 6rem;
}

@media screen and (min-width: 1024px) {
  .button {
    font-size: 1.5rem;
  }
}

/* Input */
.input {
  border: 1px solid var(--color-border);
  border-radius: 30px;
  border: 0;
  color: var(--color-headings);
  font-size: 2rem;
  outline: 0;
}

::placeholder {
  color: #dbdae2;
}

.input-group {
  border: 1px solid var(--color-border);
  margin: 1rem;
  display: flex;
  border-radius: 30px;
}

.input-group .input {
  border: 0;
  flex-grow: 1;
  padding: 1rem 2rem;
}

.input-group .button {
  border-radius: 30px;
  margin: 4px;
}

@media screen and (min-width: 1024px) {
  .input {
    font-size: 1.5rem;
  }
}

/* Cards */

.card {
  border-radius: 7px;
  box-shadow: 0 0 20px 10px #f3f3f3;
  overflow: hidden;
  font-size: 2.4rem;
}

.card__header,
.card__body {
  padding: 2rem 3rem;
}

.card--primary .card__header {
  background-color: var(--color-primary);
  color: #fff;
}

.card--primary .badge--primary {
  background: #126de4;
}

.card--secundary .card__header {
  background-color: var(--color-secundary);
  color: #fff;
}

.card--secundary .badge--secundary {
  background: #02cdf1;
}

/* Plans */
.plan {
  transition: transform 0.2s ease-out;
}

.plan__name {
  color: #fff;
  margin: 0;
  font-weight: 500;
  font-size: 2.4rem;
}

.plan__price {
  font-size: 6rem;
  font-weight: 400;
}

.plan__cycle {
  font-size: 2.4rem;
  font-weight: 300;
  opacity: 0.8;
  margin-right: 1rem;
}

.plan__description {
  font-size: 2.4rem;
  font-weight: 300;
  letter-spacing: 1px;
  display: block;
}

.card__body {
  margin: 2rem 4rem;
}

.plan .list__item {
  margin-bottom: 2rem;
  letter-spacing: 1px;
}

.plan:hover {
  transform: scale(1.05);
}

@media screen and (min-width: 1024px) {
  .plan__name {
    font-size: 1.4rem;
  }
  .plan__price {
    font-size: 5rem;
  }
  .plan__cycle {
    font-size: 1.6rem;
  }
  .plan__description {
    font-size: 1.4rem;
  }
}

/* Popular Badge */
.popular--badge {
  transform: scale(1.1);
}

.popular--badge .card__header {
  position: relative;
}

.popular--badge .card__header::before {
  content: url(../images/popular.svg);
  width: 40px;
  position: absolute;
  display: inline-block;
  top: -6px;
  right: 5%;
}

.popular--badge:hover {
  transform: scale(1.15);
}

/* Media Objects */
.media {
  display: flex;
  margin-bottom: 4rem;
}
/* ... */

